# jsonschema-markdown

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  cliff.toml  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: pr.yml  python-publish.yml  release.yml
jsonschema_markdown/: __init__.py  main.py  utils.py
jsonschema_markdown/converter/: markdown.py
scripts/: generate-tests.sh  release.sh
tests/: model.md  model.py  model_custom-title_no-footer.md  model_no-empty-columns.md  test_generate.py  test_generate_examples_format.py  test_schema_examples.py
tests/schema-examples/: array-items-anyof-required.json  array-items-anyof-required.md  array-items-anyof-required_no-empty-columns.md  basic-anyOf-multiple-types.json  basic-anyOf-multiple-types.md  basic-anyOf-multiple-types_no-empty-columns.md  basic-anyOf-null.json  basic-anyOf-null.md  basic-anyOf-null_no-empty-columns.md  conditional-if-only.json  conditional-if-only.md  conditional-if-only_no-empty-columns.md  conditional-if-then-else.json  conditional-if-then-else.md  conditional-if-then-else_no-empty-columns.md  conditional-multiple-allof.json  conditional-multiple-allof.md  conditional-multiple-allof_no-empty-columns.md  conditional-nested-property.json  conditional-nested-property.md  conditional-nested-property_no-empty-columns.md  conditional-simple-if-then.json  conditional-simple-if-then.md  conditional-simple-if-then_no-empty-columns.md  conditional-with-pattern.json  conditional-with-pattern.md  conditional-with-pattern_no-empty-columns.md  conditional-with-required.json  conditional-with-required.md  conditional-with-required_no-empty-columns.md  defaults.json  defaults.md  defaults_no-empty-columns.md  description_with_newlines.json  description_with_newlines.md  description_with_newlines_no-empty-columns.md  integer.json  integer.md  integer_no-empty-columns.md  multiple-anyof-inline.json  (+14 more)
tests/schema-examples/integer/: integer.json  integer.md
tests/schema-examples/simple/: simple.md
