[tool.poetry]
name = "jsonschema-markdown"
license = "MIT"
version = "0.3.4"
description = "Export a JSON Schema document to Markdown documentation."
authors = ["Elisiário Couto <elisiario@couto.io>"]
repository = "https://github.com/elisiariocouto/jsonschema-markdown"
readme = "README.md"
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Topic :: Documentation",
  "Topic :: File Formats :: JSON :: JSON Schema",
  "Topic :: Text Processing :: Markup :: Markdown",
  "Topic :: Utilities",
  "Topic :: Software Development :: Documentation",
]
keywords = ["jsonschema", "markdown", "documentation", "docs", "json"]
packages = [{ include = "jsonschema_markdown" }]

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.7"
loguru = "^0.7.2"
jsonref = "^1.1.0"

[tool.poetry.group.dev.dependencies]
black = "^24.2.0"
ruff = "^0.3.0"
pytest = "^8.0.0"
pre-commit = "^3.6.1"
pydantic = "^2.6.1"
pytest-cov = "^5.0.0"

[tool.poetry.scripts]
jsonschema-markdown = "jsonschema_markdown.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
lint.ignore = ["E501", "B008", "B006"]
lint.extend-select = ["B", "C4", "PIE", "T20", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "PIE804", "SIM115"]
