[project]
name = "jsonschema-markdown"
version = "2025.5.0"
description = "Export a JSON Schema document to Markdown documentation."
authors = [{ name = "Elisiário Couto", email = "elisiario@couto.io" }]
requires-python = "~=3.9"
readme = "README.md"
license = "MIT"
keywords = ["jsonschema", "markdown", "documentation", "docs", "json"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Documentation",
    "Topic :: File Formats :: JSON :: JSON Schema",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Utilities",
    "Topic :: Software Development :: Documentation",
]
dependencies = [
    "click>=8.1.7,<9",
    "loguru>=0.7.2,<0.8",
    "jsonref>=1.1.0,<2",
    "pyyaml>=6.0.2,<7",
]

[project.urls]
Repository = "https://github.com/elisiariocouto/jsonschema-markdown"

[project.scripts]
jsonschema-markdown = "jsonschema_markdown.main:cli"

[dependency-groups]
dev = [
    "pytest>=8.0.0,<9",
    "pre-commit>=3.7.0,<4",
    "pydantic>=2.6.1,<3",
    "pytest-cov>=5.0.0,<6",
    "ruff>=0.8.6",
]

[tool.hatch.build.targets.sdist]
include = ["jsonschema_markdown"]

[tool.hatch.build.targets.wheel]
include = ["jsonschema_markdown"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
lint.ignore = ["E501", "B008", "B006"]
lint.extend-select = ["B", "C4", "PIE", "T20", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["T201", "PIE804", "SIM115"]
